--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "pdf-field-finder",
+  "name": "custom-pdf-example",
   "version": "0.0.1",
-  "description": "Experimenting with finding fields in a pdf",
-  "main": "App.js",
+  "description": "Example of creating a custom pdf",
+  "main": "dist/App.js",
   "scripts": {
-    "start": "node App.js",
-    "build": "tsc"
+    "start": "tsc && node dist/App.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dmcclung/pdf-field-finder.git"
+    "url": "git+https://github.com/dmcclung/custom-pdf-example.git"
   },
   "keywords": [
     "PDF",
-    "Fields",
-    "Forms"
+    "Custom Report"
   ],
   "author": "Dylan McClung",
   "license": "MIT",
@@ -23,6 +21,7 @@
   },
   "homepage": "https://github.com/dmcclung/pdf-field-finder#readme",
   "devDependencies": {
+    "@types/node": "^10.5.8",
     "typescript": "^3.0.1",
     "yarn": "^1.9.4"
   }
